Add fruits via HTML form submit
