# fruit-store/src/main/java/org/citrusframework/demo/fruits/WebResource.java
@@ -18,18 +18,27 @@
 package org.citrusframework.demo.fruits;
 
 import javax.inject.Inject;
+import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
+import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.MultivaluedMap;
+import java.math.BigDecimal;
+import java.util.Arrays;
+import java.util.stream.Collectors;
 
 import io.quarkus.qute.Template;
 import io.quarkus.qute.TemplateInstance;
+import org.citrusframework.demo.fruits.model.Category;
+import org.citrusframework.demo.fruits.model.Fruit;
 
 /**
  * @author Christoph Deppisch
  */
 @Path("/")
+@Produces(MediaType.TEXT_HTML)
 public class WebResource {
 
     @Inject
@@ -39,8 +48,27 @@ public class WebResource {
     FruitStore store;
 
     @GET
-    @Produces(MediaType.TEXT_HTML)
     public TemplateInstance index() {
-        return index.data("fruits", store.findAll());
+        return index.data("fruits", store.findAll())
+                    .data("categories", store.getCategories());
+    }
+
+    @POST
+    @Consumes({MediaType.APPLICATION_FORM_URLENCODED})
+    public TemplateInstance formSubmit(MultivaluedMap<String, String> form) {
+        Fruit fruit = new Fruit(form.getFirst("name"), form.getFirst("description"));
+
+        if (form.getFirst("category") != null && !form.getFirst("category").isEmpty()) {
+            fruit.setCategory(new Category(form.getFirst("category")));
+        }
+
+        fruit.setPrice(new BigDecimal(form.getFirst("price")));
+        fruit.setStatus(Fruit.Status.valueOf(form.getFirst("status")));
+        fruit.setTags(Arrays.stream(form.getFirst("tags").split(","))
+                .map(String::trim)
+                .collect(Collectors.toList()));
+
+        store.add(fruit);
+        return index();
     }
 }
