# fruit-store/src/test/resources/openapi.json
@@ -19,6 +19,29 @@
             }
           }
         }
+      },
+      "post" : {
+        "requestBody" : {
+          "content" : {
+            "application/x-www-form-urlencoded" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/MultivaluedMapStringString"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "text/html" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/TemplateInstance"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/fruits" : {
@@ -110,6 +133,12 @@
   },
   "components" : {
     "schemas" : {
+      "MultivaluedMapStringString" : {
+        "type" : "object",
+        "additionalProperties" : {
+          "type" : "string"
+        }
+      },
       "TemplateInstance" : {
         "type" : "object"
       },
